<resources>
    <string name="app_name">BBS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="fullname">FullName</string>
    <string name="email">Email</string>
    <string name="pleaseLogin">Already have an account? Please login!</string>
    <string name="pleasesignup">No account? Please sign up!</string>
    <string name="input_message">Input Message</string>
    <string name="input">Input</string>
    <string name="msg_title">Message</string>
</resources>